# AI-CRM-RAG-

./: .env  README.md  app.py  build_index.py  chat.py  config.py  conversations.db  db.py  debug_test.py  faiss_index  faiss_index_texts.npy  intent.py  knowledge.py  product_faq.txt  prompts.py  pyproject.toml  test.py  test_chat.py  test_intent.py
